--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,18 +8,18 @@
   </head>
   <body>
     <header>
-      <a href="h3">
-        <p>WebStudio</p>
-      </a>
       <nav>
         <ul>
+          <li><a href="#">WebStudio</a></li>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <main>
@@ -139,9 +139,7 @@
     </main>
 
     <footer>
-      <a href="#">
-        <p>WebStudio</p>
-      </a>
+      <a href="#">WebStudio</a>
       <address>
         <ul>
           <li>
