--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <header>
       <nav>
+        <a href="#">WebStudio</a>
         <ul>
-          <li><a href="#">WebStudio</a></li>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
@@ -35,30 +35,19 @@
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
             <h3>ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
@@ -66,28 +55,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img
-              src="./img/foto1.jpg"
-              alt="фото роботи на комп'ютері"
-              width="370"
-              height="294"
-            />
+            <img src="./img/foto1.jpg" alt="фото роботи на комп'ютері" width="370" height="294" />
           </li>
           <li>
-            <img
-              src="./img/foto2.jpg"
-              alt="фото роботи на комп'ютері"
-              width="370"
-              height="294"
-            />
+            <img src="./img/foto2.jpg" alt="фото роботи на комп'ютері" width="370" height="294" />
           </li>
           <li>
-            <img
-              src="./img/foto3.jpg"
-              alt="фото роботи на комп'ютері"
-              width="370"
-              height="294"
-            />
+            <img src="./img/foto3.jpg" alt="фото роботи на комп'ютері" width="370" height="294" />
           </li>
         </ul>
       </section>
@@ -95,42 +69,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img
-              src="./img/p-designer.jpg"
-              alt="Product Designer"
-              width="270"
-              height="260"
-            />
+            <img src="./img/p-designer.jpg" alt="Product Designer" width="270" height="260" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img
-              src="./img/developer.jpg"
-              alt="Frontend Developer"
-              width="270"
-              height="260"
-            />
+            <img src="./img/developer.jpg" alt="Frontend Developer" width="270" height="260" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./img/marketing.jpg"
-              alt="Marketing"
-              width="270"
-              height="260"
-            />
+            <img src="./img/marketing.jpg" alt="Marketing" width="270" height="260" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./img/u-designer.jpg"
-              alt="UI Designer"
-              width="270"
-              height="260"
-            />
+            <img src="./img/u-designer.jpg" alt="UI Designer" width="270" height="260" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
